[metadata]
name = mufi
version = 0.3.1
description = Mufi: simple music finder for command-line
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python music cli
license = GPLv3
author = Maksim Terpilowski,
author_email = maximtrp@gmail.com,
url = http://github.com/maximtrp/mufi,
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Home Automation
	Topic :: Internet
	Topic :: Text Processing :: General
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
install_requires =
    selenium
    tqdm

[options.entry_points]
console_scripts =
    mufi = mufi.mufi:main
    mufi-recs = mufi.mufi_recs:main

[options.package_data]
* = *.md